--- a/css/owl-carousel.css
+++ b/css/owl-carousel.css
@@ -154,9 +154,7 @@
   margin-top: -40px;
   background: url("owl.video.play.png") no-repeat;
   cursor: pointer;
-  z-index: 1;
-  -webkit-backface-visibility: hidden;
-  transition: transform 100ms ease; }
+  z-index: 1; }
 
 .owl-carousel .owl-video-play-icon:hover {
   -ms-transform: scale(1.3, 1.3);
